[package]
name = "wpool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1"
parking_lot = "0.12"
tiny-fn = "0.1"
crossbeam-utils = "0.8"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
drain_filter_polyfill = "0.1.3"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
